--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "setup.js",
   "scripts": {
     "setup": "node setup.js",
-    "start": "streamlit run app.py"
+    "start": "python3 -m streamlit run app.py"
   },
   "keywords": ["drawing", "analysis", "children", "psychology"],
   "author": "",
