--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,15 @@
 # Core Streamlit and web framework
 streamlit>=1.28.0
-plotly>=5.15.0
 
 # Computer vision and image processing
 opencv-python>=4.8.0
 pillow>=10.0.0
-scikit-image>=0.21.0
-scikit-learn>=1.3.0
 
 # Scientific computing
 numpy>=1.24.0
-scipy>=1.11.0
-pandas>=2.0.0
-matplotlib>=3.7.0
 
-# AI/ML frameworks
-torch>=2.0.0
-torchvision>=0.15.0
-transformers>=4.30.0
-
-# Video processing
-moviepy>=1.0.3
-imageio>=2.35.0
-imageio-ffmpeg>=0.4.8
-
-# API integrations
-openai>=1.3.0
-requests>=2.31.0
-python-dotenv>=1.0.0
-
-# Report generation
-reportlab>=4.0.0
-
-# Optional advanced features
-clip-by-openai
-segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
-
-# Additional utilities
-seaborn>=0.11.0
+# Optional: For enhanced features (install if needed)
+# torch>=2.0.0
+# transformers>=4.30.0
+# moviepy>=1.0.3
+# reportlab>=4.0.0
